--- a/tienda.html
+++ b/tienda.html
@@ -14,23 +14,23 @@
 
 <body>
     <!-- Header -->
-    <header class="container-fluid shadow-sm p-3 mb-5 bg-body rounded">
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <header class="container-fluid p-3 bg-primary rounded">
+        <nav class="navbar navbar-expand-lg">
             <div class="container-fluid gap-3">
                 <a class="navbar-brand" href="#index"></a>
                 <img src="./img/logoico.ico" width="160" height="130" alt="logo">
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                <button class="btn btn-success navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
                     aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                     <div class="navbar-nav gap-3">
-                        <a class="btn btn-outline-dark" aria-current="page" href="index.html">Inicio</a>
-                        <a class="btn btn-outline-dark" aria-current="page" href="tienda.html">Tienda</a>
-                        <a class="btn btn-outline-dark" aria-current="page" href="servicios.html">Servicios</a>
-                        <a class="btn btn-outline-dark" aria-current="page" href="nosotros.html">Nosotros</a>
-                        <a class="btn btn-outline-dark" aria-current="page" href="contacto.html">Contacto</a>
+                        <a class="btn btn-success" aria-current="page" href="index.html">Inicio</a>
+                        <a class="btn btn-success" aria-current="page" href="tienda.html">Tienda</a>
+                        <a class="btn btn-success" aria-current="page" href="servicios.html">Servicios</a>
+                        <a class="btn btn-success" aria-current="page" href="nosotros.html">Nosotros</a>
+                        <a class="btn btn-success" aria-current="page" href="contacto.html">Contacto</a>
                     </div>
                 </div>
             </div>
@@ -39,9 +39,13 @@
     <!-- Main -->
     <main class="container">
         <h1 class="text-center m-5">Bienvenido a la tienda</h1>
-        <div class="row row-cols-1 row-cols-md-3 g-4">
-            <div class="col">
-                <div class="card h-100">
+        <!-- Fila -->
+        <div class="row">
+            <!-- Columna -->
+            <div class="col-12 col-sm-6 p-2">
+                <!-- Card -->
+                <div class="card">
+                    <!-- Imagen -->
                     <img src="./img/vinilonavidad.jpg" alt="promo" class="rounded-circle">
                     <div class="card-body">
                         <h5 class="card-title">Vinilo Navideño</h5>
@@ -53,8 +57,11 @@
                     </div>
                 </div>
             </div>
-            <div class="col">
-                <div class="card h-100">
+            <!-- Columna -->
+            <div class="col-12 col-sm-6 p-2">
+                <!-- Card -->
+                <div class="card">
+                    <!-- Imagen -->
                     <img src="./img/promo vinilo.jpg" alt="diseño" class="card-img-top">
                     <div class="card-body">
                         <h5 class="card-title">Promociones</h5>
@@ -65,8 +72,14 @@
                     </div>
                 </div>
             </div>
-            <div class="col">
-                <div class="card h-100">
+        </div>
+        <!-- Fila -->
+        <div class="row">
+            <!-- Columna -->
+            <div class="col-12 col-sm-6 p-2">
+                <!-- Card -->
+                <div class="card">
+                    <!-- Imagen -->
                     <img src="./img/vinilonavidad.jpg" alt="promo" class="rounded-circle">
                     <div class="card-body">
                         <h5 class="card-title">Vinilo Navideño</h5>
@@ -78,8 +91,11 @@
                     </div>
                 </div>
             </div>
-            <div class="col">
-                <div class="card h-100">
+            <!-- Columna -->
+            <div class="col-12 col-sm-6 p-2">
+                <!-- Card -->
+                <div class="card">
+                    <!-- Imagen -->
                     <img src="./img/promo vinilo.jpg" alt="diseño" class="card-img-top">
                     <div class="card-body">
                         <h5 class="card-title">Diseño Personalizado</h5>
@@ -90,8 +106,10 @@
                     </div>
                 </div>
             </div>
+        </div>
+        <div class="row">
             <div class="col">
-                <div class="card h-100 bg-">
+                <div class="card h-100">
                     <img src="./img/vinilonavidad.jpg" alt="promo" class="rounded-circle">
                     <div class="card-body">
                         <h5 class="card-title">Vinilo Navideño</h5>
