--- a/contacto.html
+++ b/contacto.html
@@ -14,24 +14,33 @@
 
 <body>
     <!-- Header -->
-    <header class="container-fluid shadow-sm p-3 mb-5 bg-body rounded">
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <div class="container-fluid gap-3">
-                <a class="navbar-brand" href="#index"></a>
-                <img src="./img/logoico.ico" width="160" height="130" alt="logo">
+    <header class="container-fluid fixed-top rounded">
+        <nav class="navbar navbar-expand-lg">
+            <div class="container-fluid">
+                <a href="index.html" class="logo"><img src="./img/logoico.ico" width="160" height="130" alt="logo"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
+                    data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false"
                     aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                    <div class="navbar-nav gap-3">
-                        <a class="btn btn-outline-dark" aria-current="page" href="index.html">Inicio</a>
-                        <a class="btn btn-outline-dark" aria-current="page" href="tienda.html">Tienda</a>
-                        <a class="btn btn-outline-dark" aria-current="page" href="servicios.html">Servicios</a>
-                        <a class="btn btn-outline-dark" aria-current="page" href="nosotros.html">Nosotros</a>
-                        <a class="btn btn-outline-dark" aria-current="page" href="contacto.html">Contacto</a>
-                    </div>
+                <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="btn btn-cta" href="index.html">Inicio</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="tienda.html">Tienda</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="servicios.html">Servicios</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="nosotros.html">Nosotros</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="btn-cta" href="contacto.html">Contacto</a>
+                        </li>
+                    </ul>
                 </div>
             </div>
         </nav>
@@ -75,7 +84,7 @@
         </div>
     </main>
     <!-- Footer -->
-    <footer class="container-fluid shadow-sm p-3 mb-5 bg-body rounded mt-5">
+    <footer class="container-fluid p-3 mb-5 rounded mt-5">
         <div class="d-flex justify-content-evenly m-5">
             <div>
                 <button type="button" class="btn btn-primary"><i class="fab fa-facebook"></i></button>
@@ -87,25 +96,21 @@
                 <button type="button" class="btn btn-success"><i class="fab fa-whatsapp"></i></button>
             </div>
         </div>
-        <div class="d-flex justify-content-evenly m-5">
-            <div>
-                <a class="nav-link link-dark" href="">Ayuda</a>
-            </div>
-            <div>
-                <a class="nav-link link-dark" href="">Promociones</a>
-            </div>
-            <div>
-                <a class="nav-link link-dark" href="">Sugerencias</a>
-            </div>
-            <div>
-                <a class="nav-link link-dark" href="">Contacto</a>
-            </div>
+        <div>
+            <ul class="d-flex justify-content-evenly">
+                <li><a href="">Ayuda</a></li>
+                <li><a href="">Promociones</a></li>
+                <li><a href="">Sugerencias</a></li>
+                <li><a href="">Contacto</a></li>
+            </ul>
         </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
         integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
         crossorigin="anonymous"></script>
-    <script src="./js/bootstrap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
