--- a/contacto.html
+++ b/contacto.html
@@ -4,7 +4,9 @@
 <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />    
+    <meta name="description" content="Diseño Multimedial Personalizado">
+    <meta name="keywords" content="Contacto, Diseño, Comunicacion, Decoracion">
     <title>Eure-k Diseño Multimedial</title>
     <link rel="icon" href="./img/logo4.ico" />
     <script src="https://kit.fontawesome.com/67efa75ecc.js" crossorigin="anonymous"></script>
@@ -85,15 +87,16 @@
     </main>
     <!-- Footer -->
     <footer class="container-fluid p-3 mb-5 rounded mt-5">
+        <!-- Iconos Redes Sociales -->
         <div class="d-flex justify-content-evenly m-5">
             <div>
-                <button type="button" class="btn btn-primary"><i class="fab fa-facebook"></i></button>
+                <a href="#" class="btn-red facebook--link"><i class="fab fa-facebook"></i></a>
             </div>
             <div>
-                <button type="button" class="btn btn-dark"><i class="fab fa-instagram"></i></button>
+                <a href="#" class="btn-red instagram--link"><i class="fab fa-instagram"></i></a>
             </div>
             <div>
-                <button type="button" class="btn btn-success"><i class="fab fa-whatsapp"></i></button>
+                <a href="#" class="btn-red whatsapp--link"><i class="fab fa-whatsapp"></i></a>
             </div>
         </div>
         <div>
