--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
     <header class="container-fluid fixed-top rounded">
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
-                <a href="index.html" class="logo"><img src="./img/logoico.ico" width="160" height="130" alt="logo"></a>
+                <a href="index.html" class="logo"><img class="agitar" src="./img/logoico.ico" width="160" height="130" alt="logo"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false"
                     aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                         <li class="nav-item">
                             <a class="btn btn-cta" href="index.html">Inicio</a>
                         </li>
@@ -49,8 +49,9 @@
     </header>
     <!-- Main -->
     <main class="container">
+        <!-- Titulo -->
         <div class="titulo">
-            <h2>Eure-k - Diseño Multimedial .</h2>
+            <h2>Eure-k - Diseño Multimedial </h2>
         </div>        
         <!-- Fila -->
         <div class="row">
@@ -159,7 +160,6 @@
                 <li><a href="">Ayuda</a></li>
                 <li><a href="">Promociones</a></li>
                 <li><a href="">Sugerencias</a></li>
-                <li><a href="">Contacto</a></li>
             </ul>
         </div>
     </footer>
