--- a/nosotros.html
+++ b/nosotros.html
@@ -18,14 +18,14 @@
     <header class="container-fluid fixed-top rounded">
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
-                <a href="index.html" class="logo"><img src="./img/logoico.ico" width="160" height="130" alt="logo"></a>
+                <a href="index.html" class="logo"><img src="./img/logoico.ico" class="agitar" width="160" height="130" alt="logo"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false"
                     aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                         <li class="nav-item">
                             <a class="btn btn-cta" href="index.html">Inicio</a>
                         </li>
@@ -48,6 +48,10 @@
     </header>
     <!-- Main -->
     <main class="container">
+        <!-- Titulo -->
+        <div class="titulo">
+            <h2>Sobre Nosotros</h2>
+        </div>
         <div class="mt-5">
             <div class="row">
                 <div class="col-md-8">
@@ -63,7 +67,7 @@
                             MULTIMEDIALES!</p>
                         <p class="card-text"><small class="text-muted">Pedinos tu idea nosotros te la diseñamos</small>
                         </p>
-                        <button type="button" class="btn btn-dark"><i class="fab fa-instagram"></i></button>
+                        <button type="button" class="btn-red instagram--link"><i class="fab fa-instagram"></i></button>
                     </div>
                 </div>
                 <div class="col">
@@ -88,7 +92,7 @@
                             "lo encontré!". Por esa razón, aquí encontraras las herramientas necesarias para TUS DISEÑOS
                             MULTIMEDIALES!</p>
                         <p class="card-text text"><small>Pedinos tu idea nosotros te la diseñamos</small></p>
-                        <button type="button" class="btn btn-success"><i class="fab fa-whatsapp"></i></button>
+                        <button type="button" class="btn-red whatsapp--link"><i class="fab fa-whatsapp"></i></button>
                     </div>
                 </div>
             </div>
@@ -110,12 +114,31 @@
                 <a href="#" class="btn-red whatsapp--link"><i class="fab fa-whatsapp"></i></a>
             </div>
         </div>
+
+        <div class="container">
+            <div class="row">
+                <div class="col-12 col-sm-3">
+                    <a href="#" class="btn" >Ayuda</a>
+                </div>            
+                <div class="col-12 col-sm-3">
+                    <a href="#">Promociones</a>
+                </div>
+                <div class="col-12 col-sm-3">
+                    <a href="#">Sugerencias</a>
+                </div>
+                <div class="col-12 col-sm-3">
+                    <a href="#">Sugerencias</a>
+                </div>
+            </div>
+        </div>
+        
+
         <div>
             <ul class="d-flex justify-content-evenly">
                 <li><a href="">Ayuda</a></li>
                 <li><a href="">Promociones</a></li>
                 <li><a href="">Sugerencias</a></li>
-                <li><a href="">Contacto</a></li>
+                <li><a href="">Sugerencias</a></li>
             </ul>
         </div>
     </footer>
