--- a/servicios.html
+++ b/servicios.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />    
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Diseño Multimedial Personalizado">
     <meta name="keywords" content="Servicios, Personalizado, Edicion, Video">
     <title>Eure-k Diseño Multimedial</title>
@@ -19,14 +19,14 @@
     <header class="container-fluid fixed-top rounded">
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
-                <a href="index.html" class="logo"><img src="./img/logoico.ico" width="160" height="130" alt="logo"></a>
+                <a href="index.html" class="logo"><img src="./img/logoico.ico" class="agitar" width="160" height="130" alt="logo"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false"
                     aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                         <li class="nav-item">
                             <a class="btn btn-cta" href="index.html">Inicio</a>
                         </li>
@@ -49,25 +49,50 @@
     </header>
     <!-- Main -->
     <main class="container">
+        <!-- Titulo -->
+        <div class="titulo">
+            <h2>Nuestros Servicios</h2>
+        </div>
+        <!-- Fila -->
+        <div class="row">
+            <!-- Columna -->
+            <div class="col-12 col-sm-4 p-2">
+                <div class="card bg-secondary text-white">
+                    <h3 class="card-title text-uppercase">Edicion de Video</h3>
+                    <p class=" mt-5 text-uppercase">
+                        Video Clip perzonalido para la banda Los Menos Indicados Punk Rock de Rawson Chubut
+                        Contanos tu idea que la realizamos juntos
+                        Eure-k - Diseño Multimedial
+                    </p>
 
-        <div class="mt-5">
-            <div class="row">
-                <div class="col-md-8 ml-5">
-                    <div class="card-body">
-                        <h2 class="card-title text-uppercase">Edicion de video clip para uno de los temas del DEMO DE
-                            LOS MENOS INDICADOS
-                            PUNK ROCK</h2>
-                        <div class="ratio ratio-16x9">
-                            <iframe width="560" height="315" src="https://www.youtube.com/embed/qGqn4mAbpas"
-                                title="YouTube video player" frameborder="0"
-                                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                                allowfullscreen></iframe>
-                        </div>
+                </div>
+            </div>
+            <!-- Columna -->
+            <div class="col-12 col-sm-8 p-2">
+                <div class="card bg-secondary text-white">
+                    <div class="ratio ratio-16x9">
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/qGqn4mAbpas"
+                            title="YouTube video player" frameborder="0"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                            allowfullscreen></iframe>
                     </div>
                 </div>
-                <div class="col">
-                    <h2 class="card-title text-uppercase">Diseños personalizados a pedido</h2>
-                    <img src="./img/trabajonavidad.jpg" class="img-fluid rounded-start" alt="logo">
+            </div>
+        </div>
+        <div class="titulo">
+            <h2 class="card-title">Diseños personalizados a pedido</h2>
+        </div>
+        <!-- Fila -->
+        <div class="row">
+            <!-- Columna -->
+            <div class="col-12 col-sm-6 p-2">
+                <div class="card bg-secondary text-white">
+                    <img src="./img/diseñobanner.jpg" class="img-fluid" alt="DiseñoBannerPerzonalizado">
+                </div>
+            </div>
+            <div class="col-12 col-sm-6 p-2">
+                <div class="card bg-secondary text-white">
+                    <img src="./img/diseñoclases.jpg" class="img-fluid" alt="DiseñoBannerPerzonalizado">
                 </div>
             </div>
         </div>
@@ -91,7 +116,6 @@
                 <li><a href="">Ayuda</a></li>
                 <li><a href="">Promociones</a></li>
                 <li><a href="">Sugerencias</a></li>
-                <li><a href="">Contacto</a></li>
             </ul>
         </div>
     </footer>
