--- a/tienda.html
+++ b/tienda.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />    
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Diseño Multimedial Personalizado">
     <meta name="keywords" content="Tienda, Vinilo, Navidad, Decoracion">
     <title>Eure-k Diseño Multimedial</title>
@@ -19,14 +19,14 @@
     <header class="container-fluid fixed-top rounded">
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
-                <a href="index.html" class="logo"><img src="./img/logoico.ico" width="160" height="130" alt="logo"></a>
+                <a href="index.html" class="logo"><img src="./img/logoico.ico" class="agitar" width="160" height="130" alt="logo"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false"
                     aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                         <li class="nav-item">
                             <a class="btn btn-cta" href="index.html">Inicio</a>
                         </li>
@@ -49,7 +49,10 @@
     </header>
     <!-- Main -->
     <main class="container">
-        <button class="titulo" style="vertical-align:middle"><span>Bienvenido</span></button>
+        <!-- Titulo -->
+        <div class="titulo">
+            <h2>Bienvenido a la Tienda</h2>
+        </div>
         <!-- Fila -->
         <div class="row">
             <!-- Columna -->
@@ -63,7 +66,7 @@
                         <p class="card-text">Excelente vinilo termoperforado de Papa Noel para ambientar tu local o
                             simplemente tu hogar</p>
                     </div>
-                    <div class="card-footer btn btn-outline-dark">
+                    <div class="card-footer btn btn-cta ">
                         <p class="text-center m-0">$2000</p>
                     </div>
                 </div>
@@ -78,7 +81,7 @@
                         <h5 class="card-title">Promociones</h5>
                         <p class="card-text">Diseño en vinilo para decorar tus accesorios como mas quieras</p>
                     </div>
-                    <div class="card-footer btn btn-outline-dark">
+                    <div class="card-footer btn btn-success">
                         <p class="text-center m-0">$800</p>
                     </div>
                 </div>
@@ -173,7 +176,6 @@
                 <li><a href="">Ayuda</a></li>
                 <li><a href="">Promociones</a></li>
                 <li><a href="">Sugerencias</a></li>
-                <li><a href="">Contacto</a></li>
             </ul>
         </div>
     </footer>
