optimize links nav, links footer y optimizacon general de paginas

--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
     <header class="container-fluid fixed-top rounded">
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
-                <a href="index.html" class="logo"><img class="agitar" src="./img/logoico.ico" width="160" height="130" alt="logo"></a>
+                <a href="index.html" class="logo"><img class="agitar" src="./img/logoico.ico" width="160" height="130"
+                        alt="logo"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false"
                     aria-label="Toggle navigation">
@@ -31,16 +32,16 @@
                             <a class="btn btn-cta" href="index.html">Inicio</a>
                         </li>
                         <li class="nav-item">
-                            <a href="tienda.html">Tienda</a>
+                            <a href="views/tienda.html">Tienda</a>
                         </li>
                         <li class="nav-item">
-                            <a href="servicios.html">Servicios</a>
+                            <a href="views/servicios.html">Servicios</a>
                         </li>
                         <li class="nav-item">
-                            <a href="nosotros.html">Nosotros</a>
+                            <a href="views/nosotros.html">Nosotros</a>
                         </li>
                         <li class="nav-item">
-                            <a class="btn-cta" href="contacto.html">Contacto</a>
+                            <a class="btn-cta" href="views/contacto.html">Contacto</a>
                         </li>
                     </ul>
                 </div>
@@ -52,7 +53,7 @@
         <!-- Titulo -->
         <div class="titulo">
             <h2>Eure-k - Diseño Multimedial </h2>
-        </div>        
+        </div>
         <!-- Fila -->
         <div class="row">
             <!-- Columna -->
@@ -62,9 +63,9 @@
                     <h5 class="card-title text-center m-3">Novedad</h5>
                     <img src="./img/publicidad.jpg" class="card-img-top" alt="publicidad">
                     <div class="card-body">
-                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit corporis
-                            reprehenderit quae nostrum, amet ut maxime non impedit, vitae similique nobis repudiandae
-                            placeat unde libero, dolor neque porro illum nisi.</p>
+                        <p class="card-text">Diseño exclusivo para tus redes sociales, eventos, cumpleaños,
+                            aniversarios. Decorar tu negocio o simplemente perzonalizar tu marca y/o emprendimiento. O
+                            hacer un regalo muy pero muy cool</p>
                     </div>
                 </div>
             </div>
@@ -75,9 +76,9 @@
                     <h5 class="card-title text-center m-3">Novedad</h5>
                     <img src="./img/promocion.jpg" class="card-img-top" alt="diseño">
                     <div class="card-body">
-                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit corporis
-                            reprehenderit quae nostrum, amet ut maxime non impedit, vitae similique nobis repudiandae
-                            placeat unde libero, dolor neque porro illum nisi.</p>
+                        <p class="card-text">Diseño exclusivo para tus redes sociales, eventos, cumpleaños,
+                            aniversarios. Decorar tu negocio o simplemente perzonalizar tu marca y/o emprendimiento. O
+                            hacer un regalo muy pero muy cool</p>
                     </div>
                 </div>
             </div>
@@ -91,9 +92,9 @@
                     <h5 class="card-title text-center m-3">Novedad</h5>
                     <img src="./img/publicidad.jpg" class="card-img-top" alt="publicidad">
                     <div class="card-body">
-                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit corporis
-                            reprehenderit quae nostrum, amet ut maxime non impedit, vitae similique nobis repudiandae
-                            placeat unde libero, dolor neque porro illum nisi.</p>
+                        <p class="card-text">Diseño exclusivo para tus redes sociales, eventos, cumpleaños,
+                            aniversarios. Decorar tu negocio o simplemente perzonalizar tu marca y/o emprendimiento. O
+                            hacer un regalo muy pero muy cool</p>
                     </div>
                 </div>
             </div>
@@ -104,9 +105,9 @@
                     <h5 class="card-title text-center m-3">Novedad</h5>
                     <img src="./img/promocion.jpg" class="card-img-top" alt="diseño">
                     <div class="card-body">
-                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit corporis
-                            reprehenderit quae nostrum, amet ut maxime non impedit, vitae similique nobis repudiandae
-                            placeat unde libero, dolor neque porro illum nisi.</p>
+                        <p class="card-text">Diseño exclusivo para tus redes sociales, eventos, cumpleaños,
+                            aniversarios. Decorar tu negocio o simplemente perzonalizar tu marca y/o emprendimiento. O
+                            hacer un regalo muy pero muy cool</p>
                     </div>
                 </div>
             </div>
@@ -120,9 +121,9 @@
                     <h5 class="card-title text-center m-3">Novedad</h5>
                     <img src="./img/promocion.jpg" class="card-img-top" alt="diseño">
                     <div class="card-body">
-                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit corporis
-                            reprehenderit quae nostrum, amet ut maxime non impedit, vitae similique nobis repudiandae
-                            placeat unde libero, dolor neque porro illum nisi.</p>
+                        <p class="card-text">Diseño exclusivo para tus redes sociales, eventos, cumpleaños,
+                            aniversarios. Decorar tu negocio o simplemente perzonalizar tu marca y/o emprendimiento. O
+                            hacer un regalo muy pero muy cool</p>
                     </div>
                 </div>
             </div>
@@ -133,34 +134,39 @@
                     <h5 class="card-title text-center m-3">Novedad</h5>
                     <img src="./img/publicidad.jpg" class="card-img-top" alt="publicidad">
                     <div class="card-body">
-                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit corporis
-                            reprehenderit quae nostrum, amet ut maxime non impedit, vitae similique nobis repudiandae
-                            placeat unde libero, dolor neque porro illum nisi.</p>
+                        <p class="card-text">Diseño exclusivo para tus redes sociales, eventos, cumpleaños,
+                            aniversarios. Decorar tu negocio o simplemente perzonalizar tu marca y/o emprendimiento. O
+                            hacer un regalo muy pero muy cool</p>
                     </div>
                 </div>
             </div>
-        </div>
     </main>
     <!-- Footer -->
     <footer class="container-fluid p-3 mb-5 rounded mt-5">
         <!-- Iconos Redes Sociales -->
         <div class="d-flex justify-content-evenly m-5">
             <div>
-                <a href="#" class="btn-red facebook--link"><i class="fab fa-facebook"></i></a>
+                <a href="https://www.facebook.com/eurek.disenomultimedial" target="_blank"
+                    class="btn-red facebook--link"><i class="fab fa-facebook"></i></a>
             </div>
             <div>
-                <a href="#" class="btn-red instagram--link"><i class="fab fa-instagram"></i></a>
+                <a href="https://www.instagram.com/eurekdisenomultimedial/" target="_blank"
+                    class="btn-red instagram--link"><i class="fab fa-instagram"></i></a>
             </div>
             <div>
-                <a href="#" class="btn-red whatsapp--link"><i class="fab fa-whatsapp"></i></a>
+                <a href="https://wa.me/+542804373032" target="_blank" class="btn-red whatsapp--link"><i
+                        class="fab fa-whatsapp"></i></a>
             </div>
         </div>
-        <div>
-            <ul class="d-flex justify-content-evenly">
-                <li><a href="">Ayuda</a></li>
-                <li><a href="">Promociones</a></li>
-                <li><a href="">Sugerencias</a></li>
+        <!-- Botones Footer -->
+        <div class="p-5">
+            <ul class="justify-content-evenly pb-3 mb-3">
+                <li class=""><a href="#" class=" disabled px-4 text-muted-white" aria-disabled="true">Ayuda</a></li>
+                <li class=""><a href="#" class="px-2 text-muted-white">Promociones</a></li>
+                <li class=""><a href="#" class="px-3 text-muted-white">Sugerencias</a></li>
+                <li class=""><a href="#" class="px-2 text-muted-white">Contactanos</a></li>
             </ul>
+            <p class="text-center text-muted-white p-5">&copy; Realizado por Bellido Leonardo - 2022 </p>
         </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
