Modifico Tienda, Backgrounds en general, textos e imagenes y botonera nav

--- a/index.html
+++ b/index.html
@@ -52,7 +52,8 @@
     <main class="container">
         <!-- Titulo -->
         <div class="titulo">
-            <h2>Eure-k - Diseño Multimedial </h2>
+            <h2>Eure-k</h2>
+            <span class="fw-bolder">Diseño Multimedial</span>
         </div>
         <!-- Fila -->
         <div class="row">
